--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -10,6 +10,8 @@
   <h2><a th:href="@{'/'}">Home</a></h2>
   <div class="post">
     <h2 th:text="${post.title}">Title</h2>
+    <h5 th:text="'Written by ' + ${post.account.firstName}
+                  + ' ' + ${post.account.lastName}">Author</h5>
     <h5 th:text="'Published on ' + ${post.getCreatedAt()}">Created at </h5>
     <p th:text="${post.body}">body text</p>
     <br>
