--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,25 +1,30 @@
 <!doctype html>
 <html xmlns:th="https://thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="https://thymeleaf.org ">
-<head>
-  <meta charset="UTF-8">
-  <title>Blog::Home</title>
-</head>
-<body>
-<div class="container">
-  <h1>Blog Application</h1>
-  <hr>
-  <div class="posts-container">
-    <div class="post" th:each="post : ${posts}">
-      <h2><a th:href="@{'/posts/' + ${post.id}}"
-             th:text="${post.title}">Title</a></h2>
-      <h5 th:text="'Written by ' + ${post.account.firstName}
-                    + ' ' + ${post.account.lastName}">Author</h5>
-      <h5 th:text="'Published on ' + ${post.getCreatedAt()}">Created at</h5>
-      <p th:text="${post.body}">body text</p>
-      <br>
+  <head>
+    <meta charset="UTF-8">
+    <title>Blog::Home</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Blog Application</h1>
+      <hr>
+      <div class="posts-container">
+        <div class="post" th:each="post : ${posts}">
+          <h2><a th:href="@{'/posts/' + ${post.id}}"
+                 th:text="${post.title}">Title</a></h2>
+          <h5 th:text="'Written by ' + ${post.account.firstName}
+                        + ' ' + ${post.account.lastName}">Author</h5>
+          <h5 th:text="'Published on ' + ${post.getCreatedAt()}">Created at</h5>
+          <p th:text="${post.body}">body text</p>
+          <br>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-</body>
+    <hr />
+    <ul>
+      <li><a th:href="@{/register}">Register</a></li>
+      <li><a th:href="@{/login}">Login</a></li>
+    </ul>
+  </body>
 </html>
