--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,13 +9,16 @@
     <div class="container">
       <h1>Blog Application</h1>
       <hr>
+      <ul>
+        <li><a th:href="@{/posts/new}">New Post</a></li>
+      </ul>
       <div class="posts-container">
         <div class="post" th:each="post : ${posts}">
           <h2><a th:href="@{'/posts/' + ${post.id}}"
                  th:text="${post.title}">Title</a></h2>
           <h5 th:text="'Written by ' + ${post.account.firstName}
                         + ' ' + ${post.account.lastName}">Author</h5>
-          <h5 th:text="'Published on ' + ${post.getCreatedAt()}">Created at</h5>
+          <h5 th:text="'Published on ' + ${post.createdAt}">Created at</h5>
           <p th:text="${post.body}">body text</p>
           <br>
         </div>
