--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,7 @@
 <div class="container">
   <h1>Blog Application</h1>
   <hr>
+  <h2><a th:href="@{'/'}">Home</a></h2>
   <form action="#"
         th:action="@{/login}"
         method="POST">
