--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html xmlns:th="https://thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="https://thymeleaf.org ">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <title>Blog::404</title>
 </head>
 <body>
+  <h1>Blog Application</h1>
+  <hr>
   <div class="container">
-    <h1>Content Not Found</h1>
+    <h2><a th:href="@{'/'}">Home</a></h2>
+    <h1>Oops! Something went wrong!</h1>
     <hr>
   </div>
 </body>
