--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1,21 +1,29 @@
 <!doctype html>
-<html xmlns:th="https://thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="https://thymeleaf.org ">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+
 <head>
   <meta charset="UTF-8">
   <title>Blog::Post</title>
 </head>
 <body>
 <div class="container">
+  <h1>Blog Application</h1>
+  <hr>
   <h2><a th:href="@{'/'}">Home</a></h2>
   <div class="post">
     <h2 th:text="${post.title}">Title</h2>
     <h5 th:text="'Written by ' + ${post.account.firstName}
                   + ' ' + ${post.account.lastName}">Author</h5>
-    <h5 th:text="'Published on ' + ${post.getCreatedAt()}">Created at </h5>
+    <h5 th:if="${post.updatedBy}" th:text="'Updated by ' + ${post.updatedBy}">Editor</h5>
+    <h5 th:text="'Published on ' + ${post.createdAt}">Created at </h5>
+    <h5 th:text="'Updated on ' + ${post.updatedAt}">Updated at</h5>
     <p th:text="${post.body}">body text</p>
     <br>
   </div>
+  <ul sec:authorize="isAuthenticated()">
+    <li><a th:href="@{'/posts/' + ${post.id} + '/edit'}">Edit</a></li>
+    <li sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{'/posts/' + ${post.id} + '/delete'}">Delete</a></li>
+  </ul>
 </div>
 </body>
 </html>
