--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html xmlns:th="https://thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="https://thymeleaf.org ">
+<html xmlns:th="http://www.thymeleaf.org">
+
   <head>
     <meta charset="UTF-8">
-    <title>Blog::Register</title>
+    <title>Blog::Registration</title>
   </head>
   <body>
     <div class="container">
